src/objects/Draft_Email__c.object
<CustomObject>
    <fields>
        <fullName>AdditionToAddresses__c</fullName>
        <label>AdditionToAddresses</label>
        <length>3745</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCCAddresses__c</fullName>
        <label>BCCAddresses</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BodyText__c</fullName>
        <label>BodyText</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCAddresses__c</fullName>
        <label>CCAddresses</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Custom_Email_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Draft Emails</relationshipLabel>
        <relationshipName>Custom_Email_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Template_Description__c</fullName>
        <label>Email Template Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Developer_Name__c</fullName>
        <label>Email Template Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Folder_ID__c</fullName>
        <label>Email Template Folder ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Folder_Name__c</fullName>
        <label>Email Template Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_ID__c</fullName>
        <label>Email Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromAddress__c</fullName>
        <label>FromAddress</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ToAddressesName__c</fullName>
        <label>ToAddressesName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToAddresses__c</fullName>
        <label>ToAddresses</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Draft Email</label>
    <nameField>
        <label>Draft Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Draft Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>